--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "format": "npm run ci-lint . -- --fix",
     "lint": "npm run ci-lint .",
     "precommit": "lint-staged",
-    "release": "rollout",
-    "prepublishOnly": "npm run build",
+    "release": "npm run build && release",
     "tdd": "karma start",
     "test": "npm run lint && npm run test-browser && npm run test-node",
     "test-browser": "cross-env NODE_ENV=test karma start --single-run",
